<resources>
    <string name="app_name">Onitama</string>
    <string name="blue_one">blue one</string>
    <string name="blue_two">blue two</string>
    <string name="red_one">red one</string>
    <string name="red_two">red two</string>
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>
    <string name="rules">Rules</string>
    <string name="preference_file_key">ONITAMA_PROJECT_SAVED_GAMES</string>
    <string name="load_game_fragment_header"><u>Load</u></string>
    <string name="last_unsaved_game">Load Last \n Unsaved Game</string>
    <string name="no_last_unsaved_game">No Prior Unsaved \n Game to Load</string>
    <string name="return_to_welcome">Return to \n Main Menu</string>
    <string name="save_game_dialog_title">Save Game</string>
    <string name="enter_save_game_name">Enter save game name</string>
    <string name="cancel_save">Cancel</string>
    <string name="save_game_with_name">Save</string>
    <string name="save_explanation">A game saves automatically after each move.\n\n
                                    Use this to create a new save under another name.</string>
    <string name="unsaved_autosave_explanation">A game saves automatically after each move.\n\n
                                    Until a name is provided it is saved under a temporary name.\n\n
                                    This temporary save will be lost if a new game is started
                                    before a name is given.</string>
    <string name="result_view_title"><u>Game Result</u></string>
    <string name="result_view_starting_faction_text">Starting Faction:  </string>
    <string name="result_view_winning_faction_colour">Winning Faction:   </string>
    <string name="result_view_victory_condition_achieved">Victory Type:      </string>
    <string name="result_view_turn_count">Turn Count:        </string>
    <string name="result_view_return_main_menu_button">Main Menu</string>
    <string name="result_view_new_game_button">New Game</string>
    <string name="result_view_review_game_button">Review Game</string>
    <string name="rewind_game">Rewind Game</string>
    <string name="save_game">Save Game</string>
    <string name="accept_turn_change">Accept</string>
    <string name="finish_review">Finish Review</string>
    <string name="change_turn_warning_message">If the game is rewound to an earlier turn,
                                    and the change is accepted, all later turns will be lost.</string>
    <string name="review_game_message">Click the \'Finish Review\' button to return to the main menu.</string>
    <string name="delete_game_query_text">Are you certain you wish to delete the following game?</string>
    <string name="delete_game_name_textview">Game Name:</string>
    <string name="delete_game_turn_count_textview">Turn Count:</string>
    <string name="delete_game_time_saved_textview">Time Saved:</string>
    <string name="delete_game_confirm_deletion">DELETE</string>
    <string name="delete_game_cancel_deletion">CANCEL</string>
</resources>
