<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codeclan.example.myapplication.WelcomeActivity">

    <Button
        android:id="@+id/newGameButtonWelcome"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="108dp"
        android:onClick="welcomeScreenButtonOnClick"
        android:text="@string/new_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/loadGameButtonWelcome"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/load_game"
        app:layout_constraintEnd_toEndOf="@+id/newGameButtonWelcome"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/newGameButtonWelcome"
        app:layout_constraintTop_toBottomOf="@+id/newGameButtonWelcome" />


    <Button
        android:id="@+id/rulesButtonWelcome"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/rules"
        app:layout_constraintEnd_toEndOf="@+id/loadGameButtonWelcome"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/loadGameButtonWelcome"
        app:layout_constraintTop_toBottomOf="@+id/loadGameButtonWelcome" />


    <Button
        android:id="@+id/quitButtonWelcome"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/quit_game"
        app:layout_constraintEnd_toEndOf="@+id/rulesButtonWelcome"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/rulesButtonWelcome"
        app:layout_constraintTop_toBottomOf="@+id/rulesButtonWelcome" />


</android.support.constraint.ConstraintLayout>
