<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/loadGameTextView"
        android:layout_width="202dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="108dp"
        android:text="@string/load_game_fragment_header"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/loadGameButtonWelcome"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:onClick="selectGameOnClick"
        android:text="@string/last_unsaved_game"
        app:layout_constraintEnd_toEndOf="@+id/loadGameTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loadGameTextView"
        app:layout_constraintTop_toBottomOf="@+id/loadGameTextView" />


    <Button
        android:id="@+id/rulesButtonWelcome"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/rules"
        app:layout_constraintEnd_toEndOf="@+id/loadGameButtonWelcome"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/loadGameButtonWelcome"
        app:layout_constraintTop_toBottomOf="@+id/loadGameButtonWelcome" />


    <Button
        android:id="@+id/quitButtonWelcome"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/quit_game"
        app:layout_constraintEnd_toEndOf="@+id/rulesButtonWelcome"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/rulesButtonWelcome"
        app:layout_constraintTop_toBottomOf="@+id/rulesButtonWelcome" />

</android.support.constraint.ConstraintLayout>